feat:第一个界面复写。liveDate  不熟悉

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
   ~
   -->
 <resources>
-    <string name="app_name">Jetsurvey</string>
+    <string name="app_name">第一周</string>
     <string name="app_tagline">Better surveys with Jetpack Compose</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
